# ambiviz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
ambiviz/: __init__.py  aem.py  anglegram.py  directogram.py  utils.py
ambiviz/ambisonics/: __init__.py  audio_to_aem.py  binauralizer.py  common.py  decoder.py  distance.py  encoder.py  hrir.py  position.py  spherical_maps.py
tests/: conftest.py  test_aem.py  test_anglegram.py  test_directogram.py  test_plot.py
